# castestor

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  deps.sh  env.sample  pyproject.toml  requirements.txt  run.sh  settings.py
app/: __init__.py
app/cas/: forms.py  models.py  security.py  views.py
app/static/css/: style.css
app/static/images/reader/: default.html  noauth_en.xcf
app/static/lib/: ajax.collapse.div.css
app/templates/: 404.html  500.html  base.html  base_bs.html  home.html  login.html
app/templates/cas/: cas_base.xml  error.xml  success.xml
tests/: cas.py
